--- a/todo.txt
+++ b/todo.txt
@@ -3,6 +3,7 @@ oct 30 2019
 new UIs with PrimeNG
 
 enable a basic menu with buttons: ( like in the old app) ( or PriemNG menu single panel )
+use toast for messages, remove status bar
   New
   Data
     Copy JSON
